Edited HTML image placeholder, started editing CSS
HTML image placeholder was a text and changed to a proper image wrapper with alt text.
Changed CSS font color and sizes on the header.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="header-logo">
-            LOGO
+            HEADER LOGO
         </div>
         <div class="header-links">
             <ul class="links">
@@ -34,7 +34,7 @@
         </div>
         <div class="right-cont">
             <div class="img-holder">
-                this is a placeholder for an image
+                <img src="" class="text" alt="this is a placeholder for an image">
             </div>
         </div>
     </div> 
